--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <!-- card-1  -->
                     <div class="testimonial-card">
                         <div class="testimonial-text">
-                            “StudySync revolutionized my classroom! Engaging content and teacher resources make learning enjoyable. Highly recommended for educators.”
+                            “StudyWorld revolutionized my classroom! Engaging content and teacher resources make learning enjoyable. Highly recommended for educators.”
                         </div>
                         <div class="testimonial-avatar">
                             <img src="./images/avatar1.png" alt="1">
@@ -216,7 +216,7 @@
                     <!-- card-2  -->
                     <div class="testimonial-card">
                         <div class="testimonial-text">
-                            “StudySync transformed our family's learning journey. Safe, interactive, and progress tracking features are invaluable for parents.”
+                            “StudyWorld transformed our family's learning journey. Safe, interactive, and progress tracking features are invaluable for parents.”
                         </div>
                         <div class="testimonial-avatar">
                             <img src="./images/avatar2.png" alt="1">
@@ -233,7 +233,7 @@
                     <!-- card-3  -->
                     <div class="testimonial-card">
                         <div class="testimonial-text">
-                            “StudySync, a true game-changer! Flexible content, tailored assessments, and excellent support. Integral to our school district's success.”
+                            “StudyWorld, a true game-changer! Flexible content, tailored assessments, and excellent support. Integral to our school district's success.”
                         </div>
                         <div class="testimonial-avatar">
                             <img src="./images/avatar3.png" alt="1">
@@ -407,7 +407,7 @@
 
              </footer>
              <div class="footer-copyright">
-                © 2021 - Present StudySync. All rights reserved.
+                © 2021 - Present StudyWorld. All rights reserved.
              </div>
 
             </div>
